--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "chance": "^1.0.16",
     "express": "^4.16.3",
     "md5": "^2.2.1",
-    "mongodb": "^2.2.36"
+    "mongodb": "^2.2.36",
+    "stable": "^0.1.8"
   },
   "devDependencies": {
     "nodemon": "^1.18.4"
